use $ variables duh

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,5 +49,5 @@ jobs:
           context: .
           push: true
           tags: |
-            {{ env.IMAGE_NAME }}:latest
-            {{ env.REGISTRY }}/{{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
