--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,11 +2,15 @@ name: Docker
 
 on:
   push:
-    branches: [ guillaumev/docker_ci_build ]
+    branches: 
+      - 'guillaumev/docker_ci_build'
+    tags:
+      - v*
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  REGISTRY_BASE_PATH: ghcr.io/${{ github.repository }}
+  BASE_TAG: ${{ github.ref_name }}
 
 jobs:
   build:
@@ -21,33 +25,28 @@ jobs:
         with:
           repository: 'matrix-org/sydent'
           ref: 'dinsic'
-      
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: arm64
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Inspect builder
-        run: docker buildx inspect
-          
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1 
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY_BASE_PATH }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
       
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          labels: "gitsha1=${{ github.sha }}"
-          platforms: linux/amd64,linux/arm64
           context: .
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64
           push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
